--- a/6.29workshop3/index.html
+++ b/6.29workshop3/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,6 +11,7 @@
     <link rel="stylesheet" href="./css/style.css">
     <title>圖書館</title>
 </head>
+
 <body>
     <header>
         <nav class="navbar">
@@ -18,7 +20,10 @@
     </header>
     <main>
         <div class="uk-container align-center">
-            <div class="uk-card uk-width-1-3 uk-text-left">
+            <button class="k-button k-primary btn-add-book" id="add">新增書籍</button>
+            <!-- display: none(全部隱藏)、hidden(保留原本空間) -->
+            <div class="uk-card uk-width-1-3 uk-text-left" id="addwindow" style="display: none">
+
                 <ul class="fieldlist">
                     <li>
                         <img class="book-image" src="image/database.jpg" alt="">
@@ -41,15 +46,19 @@
                         <input id="bought_datepicker" value="10/10/2011" title="datepicker" style="width: 100%" />
                         <!-- <input type="text" class="k-textbox" style="width: 100%;" /> -->
                     </li>
+                    <li>
+                        <label>出版社</label>
+                        <input id="book_publisher" type="text" class="k-textbox" style="width: 100%;" />
+                    </li>
                     <li class="uk-text-right">
-                        <button class="k-button k-primary btn-add-book">新增</button>
+                        <button class="k-button k-primary btn-add-book" id="sent">新增</button>
                     </li>
                 </ul>
             </div>
             <div id="book_grid">
             </div>
         </div>
-        
+
     </main>
 
     <footer>
@@ -60,4 +69,5 @@
 <script src="./js/kendo.all.min.js"></script>
 <script src="./js/uikit.min.js"></script>
 <script src="./js/script.js"></script>
+
 </html>
