restart,workshop3final

--- a/6.29workshop3/index.html
+++ b/6.29workshop3/index.html
@@ -22,7 +22,7 @@
         <div class="uk-container align-center">
             <button class="k-button k-primary btn-add-book" id="add">新增書籍</button>
             <!-- display: none(全部隱藏)、hidden(保留原本空間) -->
-            <div class="uk-card uk-width-1-3 uk-text-left" id="addwindow" style="display: none">
+            <div class="uk-card uk-text-left" id="addwindow" style="display: none">
 
                 <ul class="fieldlist">
                     <li>
