--- a/6.29workshop3/index.html
+++ b/6.29workshop3/index.html
@@ -20,7 +20,7 @@
     </header>
     <main>
         <div class="uk-container align-center">
-            <button class="k-button k-primary btn-add-book" id="add">新增書籍</button>
+            <button class="k-button k-primary btn-add-book" id="add" type="button">新增書籍</button>
             <!-- display: none(全部隱藏)、hidden(保留原本空間) -->
             <div class="uk-card uk-text-left" id="addwindow" style="display: none">
 
@@ -51,7 +51,7 @@
                         <input id="book_publisher" type="text" class="k-textbox" style="width: 100%;" />
                     </li>
                     <li class="uk-text-right">
-                        <button class="k-button k-primary btn-add-book" id="sent">新增</button>
+                        <button class="k-button k-primary btn-add-book" id="sent" type="button">新增</button>
                     </li>
                 </ul>
             </div>
